--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <div>
-    <h1>Hello World!!!</h1>
-    <p>Now let's conquer the world!!</p>
+    <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
+    <h1>Matthew Abada</h1>
+    <p>Hi there!</p>
+    <anchor></anchor>
     <button>Click Me</button>
   </div>
   <script src="script.js" type="text/javascript"></script>
