--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <body>
   <div>
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
-    <h1>Matthew Abada</h1>
-    <p>Hi there!</p>
-    <anchor></anchor>
-    <button>Click Me</button>
+    <anchor><h1>Matthew Abada</h1></anchor>
+    <h2>Hi there!</h2>
+    <p>My name is Matthew and I am feeling sleepy. 
+      <a href="https://github.com/mattchabbt">Github Profile</a>
+    </p>
+    <button>Click Me!</button>
   </div>
   <script src="script.js" type="text/javascript"></script>
 </body>
