--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
     <anchor><h1>Matthew Abada</h1></anchor>
     <h2>Hi there!</h2>
-    <p>My name is Matthew and I am feeling sleepy. 
-      <a href="https://github.com/mattchabbt">Github Profile</a>
-    </p>
+    <p>My name is Matthew and I am feeling sleepy!😅</p>
+    <a href="https://github.com/mattchabbt">Github Profile</a>
     <button>Click Me!</button>
   </div>
   <script src="script.js" type="text/javascript"></script>
