--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 <body>
   <div>
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
-    <anchor><h1>Matthew Abada</h1></anchor>
+    <h1>Matthew Abada</h1>
     <h2>Hi there!</h2>
-    <p>My name is Matthew and I am feeling sleepy!😅</p>
+    <p>
+      My name is Matthew and I am feeling sleepy!😅
+    </p>
     <a href="https://github.com/mattchabbt">Github Profile</a>
+    <anchor href="">More About Me</anchor>
     <button>Click Me!</button>
+  </div>
+  <div id="More About Me">
+    <h2>More About Me</h2>
   </div>
   <script src="script.js" type="text/javascript"></script>
 </body>
