--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div>
+  <div id="idMain">
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
     <h1>Matthew Abada</h1>
     <h2>Hi there!</h2>
@@ -17,9 +17,7 @@
     <anchor href="">More About Me</anchor>
     <button>Click Me!</button>
   </div>
-  <div id="More About Me">
-    <h2>More About Me</h2>
-  </div>
+  <h2>More About Me</h2>
   <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
