Utilized IDs and Classes for Styling

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
     <h1>Matthew Abada</h1>
     <h2>Hi there!</h2>
-    <p>
+    <p id="idParagraphs">
       My name is Matthew and I am feeling sleepy!😅
     </p>
     <a href="https://github.com/mattchabbt">Github Profile</a>
     <anchor href="">More About Me</anchor>
-    <button>Click Me!</button>
+    <button class="btnSimple">Click Me!</button>
   </div>
   <h2>More About Me</h2>
   <script src="script.js" type="text/javascript"></script>
