--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
     <p id="idParagraphs">
       My name is Matthew and I am feeling sleepy!😅
     </p>
-    <a href="https://github.com/mattchabbt">Github Profile</a>
-    <anchor href="">More About Me</anchor>
+    <a href="https://github.com/mattchabbt">Github Profile  </a>
+    <anchor href="#idAboutMe">More About Me </anchor>
     <button class="btnSimple">Click Me!</button>
   </div>
-  <h2>More About Me</h2>
+  <div id="idAboutMe">
+    <h2>More About Me</h2>
+    <p>
+      I am a 24 year old Computer Science Major at MacEwan University!
+    </p>
+  </div>
   <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
