Added More Personal Details to Landing Page

--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div id="idMain">
+  <divid="idMain">
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
     <h1>Matthew Abada</h1>
-    <h2>Hi there!</h2>
+    <h2 id="idTagline">Hi there!</h2>
     <p id="idParagraphs">
-      My name is Matthew and I am feeling sleepy!😅
+      My name is Matthew and I am feeling hungry!😅
     </p>
-    <a href="https://github.com/mattchabbt">Github Profile  </a>
-    <anchor href="#idAboutMe">More About Me </anchor>
+    <a href="https://github.com/mattchabbt" target="_blank">Github Profile</a>
+    &nbsp
+    <a href="#idAboutMe">More About Me </a>
+    &nbsp
     <button class="btnSimple">Click Me!</button>
-  </div>
-  <div id="idAboutMe">
-    <h2>More About Me</h2>
+    <!-- About Me -->
+    <h2 id="idAboutMe">More About Me</h2>
     <p>
-      I am a 24 year old Computer Science Major at MacEwan University!
+      I am a 24 year old Computer Science Major at MacEwan University and I can't wait to get to know you!
+    </p>
+    <!-- Fun Facts -->
+    <h2 id="idFunFacts">Fun Facts</h2>
+    <p>
+      <ol>
+        <li>I love to watch content and learn about UI/UX design, photography and filmmaking</li>
+        <li>I always order cold drinks like iced coffee no matter the weather</li>
+        <li>I'm a part-time YouTuber with a bunch of my friends</li>
+        <li>Currently an executive member of the MacEwan University Dance Club</li>
+      </ol>
     </p>
   </div>
   <script src="script.js" type="text/javascript"></script>
