--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <divid="idMain">
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
     <h1>Matthew Abada</h1>
-    <h2 id="idTagline">Hi there!</h2>
+    <h2 id="idTagline">Welcome!</h2>
     <p id="idParagraphs">
       My name is Matthew and I am feeling hungry!😅
     </p>
@@ -19,7 +19,7 @@
     &nbsp
     <button class="btnSimple">Click Me!</button>
     <!-- About Me -->
-    <h2 id="idAboutMe">More About Me</h2>
+    <h2 id="idAboutMe">Who Am I</h2>
     <p>
       I am a 24 year old Computer Science Major at MacEwan University and I can't wait to get to know you!
     </p>
@@ -27,7 +27,7 @@
     <h2 id="idFunFacts">Fun Facts</h2>
     <p>
       <ol>
-        <li>I love to watch content and learn about UI/UX design, photography and filmmaking</li>
+        <li>I love to watch content and learn about photography and filmmaking</li>
         <li>I always order cold drinks like iced coffee no matter the weather</li>
         <li>I'm a part-time YouTuber with a bunch of my friends</li>
         <li>Currently an executive member of the MacEwan University Dance Club</li>
