--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     &nbsp
     <a href="#idAboutMe">More About Me </a>
     &nbsp
-    <button class="btnSimple">Click Me!</button>
+    
     <!-- About Me -->
-    <h2 id="idAboutMe">Who Am I</h2>
+    <h2 id="idAboutMe">About Me</h2>
     <p>
       I am a 24 year old Computer Science Major at MacEwan University and I can't wait to get to know you!
     </p>
@@ -33,6 +33,9 @@
         <li>Currently an executive member of the MacEwan University Dance Club</li>
       </ol>
     </p>
+    <!-- Something cool -->
+    <h2 id="idCool">Fun Facts</h2>
+    <button class="btnSimple">Click Me For Something Cool!</button>
   </div>
   <script src="script.js" type="text/javascript"></script>
 </body>
