Configured Anchor Tags to Link to Sections

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <divid="idMain">
+  <div id="idMain">
     <img src="monkey.png" alt="Image of a Cartoonish Monkey"></img>
     <h1>Matthew Abada</h1>
     <h2 id="idTagline">Welcome!</h2>
@@ -15,9 +15,11 @@
     </p>
     <a href="https://github.com/mattchabbt" target="_blank">Github Profile</a>
     &nbsp
-    <a href="#idAboutMe">More About Me </a>
+    <a href="#idAboutMe">More About Me</a>
     &nbsp
-    
+    <a href="#idFunFacts">Fun Facts</a>
+    &nbsp
+    <a href="#idCool">Coolness</a>
     <!-- About Me -->
     <h2 id="idAboutMe">About Me</h2>
     <p>
