--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ol>
     </p>
     <!-- Something cool -->
-    <h2 id="idCool">Fun Facts</h2>
+    <h2 id="idCool">Wanna See Something Cool?</h2>
     <button class="btnSimple">Click Me For Something Cool!</button>
   </div>
   <script src="script.js" type="text/javascript"></script>
